增加部署eth tusd脚本

--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "test": "./test.sh"
   },
   "scripts": {
-    "postinstall": "patch-package",
     "coverage": "./coverage.sh",
     "flatten": "./flatten-all",
     "clean": "rm -rf ./build",
@@ -22,7 +21,13 @@
     "test:js": "./test.sh",
     "test:ts": "mocha",
     "test": "yarn test:ts && yarn test:js",
-    "checks": "yarn lint && yarn typecheck && yarn test"
+    "checks": "yarn lint && yarn typecheck && yarn test",
+    "deploy_truecurrency": "npx ts-node scripts/deploy_truecurrency.ts",
+    "hardhat:compile": "npx hardhat compile",
+    "hardhat:deploy": "npx hardhat run deploy/deploy.ts --network hardhat",
+    "hardhat:deploy-ropsten": "npx hardhat run deploy/deploy.ts --network ropsten",
+    "hardhat:deploy-proxy-ropsten": "npx hardhat run deploy/deploy_proxy.ts --network ropsten",
+    "hardhat:verify-ropsten": "npx hardhat verify --network ropsten 0x34b507f812e228c482439579C4f312596a6A6B85"
   },
   "husky": {
     "hooks": {}
@@ -30,43 +35,34 @@
   "author": "",
   "license": "SEE LICENSE IN LICENSE.md",
   "devDependencies": {
-    "@typechain/ethers-v5": "^1.0.0",
-    "@types/chai": "^4.2.11",
-    "@types/mocha": "^7.0.2",
-    "@typescript-eslint/eslint-plugin": "^2.33.0",
-    "@typescript-eslint/parser": "^2.33.0",
-    "babel-eslint": "^10.1.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-stage-2": "^6.18.0",
-    "babel-preset-stage-3": "^6.17.0",
-    "babel-register": "^6.26.0",
-    "chai": "^4.2.0",
-    "eslint": "^6.8.0",
-    "ethereum-waffle": "^3.1.2",
-    "mocha": "^7.1.1",
-    "patch-package": "^6.2.2",
-    "postinstall-postinstall": "^2.1.0",
-    "prettier": "2.0.5",
-    "prettier-plugin-solidity": "1.0.0-alpha.54",
-    "prettylint": "^1.0.0",
-    "solhint": "^3.0.0",
-    "solidity-coverage": "^0.7.0",
-    "ts-node": "^8.8.2",
-    "typechain": "^2.0.0",
-    "typescript": "^3.8.3"
+    "@nomiclabs/buidler-ethers": "^2.0.2",
+    "@nomiclabs/hardhat-ethers": "^2.0.4",
+    "@nomiclabs/hardhat-etherscan": "^2.1.8",
+    "@nomiclabs/hardhat-waffle": "^2.0.2",
+    "@typechain/ethers-v5": "^9.0.0",
+    "@types/chai": "^4.3.0",
+    "@types/mocha": "^9.1.0",
+    "@types/node": "^12.20.46",
+    "bignumber.js": "9.0.0",
+    "chai": "^4.3.6",
+    "chai-bignumber": "^3.0.0",
+    "chai-bn": "^0.3.1",
+    "dotenv": "^10.0.0",
+    "ethers": "^5.5.4",
+    "hardhat": "^2.8.3",
+    "hardhat-proxy": "^1.0.0",
+    "ts-node": "^10.5.0",
+    "tsconfig-paths": "^3.12.0",
+    "typechain": "^7.0.0",
+    "typescript": "^4.5.5"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^3.1.0",
-    "ethers": "5.0.12",
-    "ganache-cli": "6.8.1",
-    "ganache-time-traveler": "^1.0.14",
-    "husky": "^4.2.5",
     "openzeppelin-solidity": "^2.4.0",
-    "truffle": "5.1.11",
-    "truffle-flattener": "^1.4.3",
-    "truffle-hdwallet-provider": "0.0.3",
-    "web3": "1.2.4"
+    "@ethersproject/bignumber": "^5.5.0",
+    "@ethersproject/providers": "^5.5.3",
+    "@typechain/hardhat": "^4.0.0",
+    "ethers": "^5.5.4"
   },
   "resolutions": {
     "ethereum-waffle/**/ganache-core": "^2.13.0",
