--- a/package.json
+++ b/package.json
@@ -27,7 +27,11 @@
     "hardhat:deploy": "npx hardhat run deploy/deploy.ts --network hardhat",
     "hardhat:deploy-ropsten": "npx hardhat run deploy/deploy.ts --network ropsten",
     "hardhat:deploy-proxy-ropsten": "npx hardhat run deploy/deploy_proxy.ts --network ropsten",
-    "hardhat:verify-ropsten": "npx hardhat verify --network ropsten 0x34b507f812e228c482439579C4f312596a6A6B85"
+    "hardhat:deploy-avalanche": "npx hardhat run deploy/deploy.ts --network avalanche",
+    "hardhat:deploy-proxy-avalanche": "npx hardhat run deploy/deploy_proxy.ts --network avalanche",
+    "hardhat:verify-ropsten": "npx hardhat verify --network ropsten 0x34b507f812e228c482439579C4f312596a6A6B85",
+    "hardhat:verify-avalanche": "npx hardhat verify --network avalanche 0x34b507f812e228c482439579C4f312596a6A6B85"
+    
   },
   "husky": {
     "hooks": {}
