--- a/package.json
+++ b/package.json
@@ -16,11 +16,19 @@
     "build": "yarn clean && yarn build:sol && yarn build:types && bash ./indexBuild.sh",
     "test": "mocha",
     "checks": "yarn lint && yarn typecheck && yarn test",
-    "docs": "npx solidity-docgen --solc-module solc-0.6 -i contracts -o docs"
+    "docs": "npx solidity-docgen --solc-module solc-0.6 -i contracts -o docs",
+    "hardhat:compile": "npx hardhat compile",
+    "hardhat:deploy-avalanche": "npx hardhat run deploy/deploy.ts --network avalanche",
+    "hardhat:deploy-proxy-avalanche": "npx hardhat run deploy/deploy_proxy.ts --network avalanche",
+    "hardhat:verify-avalanche": "npx hardhat verify --network avalanche 0x34b507f812e228c482439579C4f312596a6A6B85"
   },
   "author": "",
   "license": "SEE LICENSE IN LICENSE.md",
   "devDependencies": {
+    "@nomiclabs/buidler-ethers": "^2.0.2",
+    "@nomiclabs/hardhat-ethers": "^2.0.4",
+    "@nomiclabs/hardhat-etherscan": "^2.1.8",
+    "@nomiclabs/hardhat-waffle": "^2.0.2",
     "@typechain/ethers-v5": "^2.0.0",
     "@types/chai": "^4.2.11",
     "@types/mocha": "^7.0.2",
@@ -38,6 +46,8 @@
     "solc-0.6": "npm:solc@0.6.10",
     "solc": "0.6.10",
     "solhint": "^3.0.0",
+    "hardhat": "^2.8.3",
+    "hardhat-proxy": "^1.0.0",
     "ts-node": "^9.0.0",
     "tsconfig-paths": "^3.9.0",
     "typechain": "^3.0.0",
@@ -50,6 +60,7 @@
     "ganache-cli": "6.8.1",
     "ganache-time-traveler": "^1.0.14",
     "openzeppelin-solidity": "^2.4.0",
+    "@typechain/hardhat": "^4.0.0",
     "web3": "1.2.4"
   },
   "resolutions": {
