--- a/package.json
+++ b/package.json
@@ -55,12 +55,13 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^3.1.0",
+    "@typechain/hardhat": "^4.0.0",
+    "dotenv": "^16.0.0",
     "ethereum-mars": "^0.1.3-beta",
     "ethers": "5.0.12",
     "ganache-cli": "6.8.1",
     "ganache-time-traveler": "^1.0.14",
     "openzeppelin-solidity": "^2.4.0",
-    "@typechain/hardhat": "^4.0.0",
     "web3": "1.2.4"
   },
   "resolutions": {
