--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,24 +1,26 @@
 {
   "compilerOptions": {
-    "resolveJsonModule": true,
+    "baseUrl": "./",
+    "target": "es2018",
+    "module": "commonjs",
+    "strict": true,
     "esModuleInterop": true,
-    "moduleResolution": "node",
-    "skipLibCheck": true,
-    "target": "esnext",
-    "sourceMap": true,
-    "baseUrl": ".",
-    "paths": {
-      "contracts/*": ["build/*"],
-      "contracts": ["build"],
-      "scripts/*": ["scripts/*"],
-      "scripts": ["scripts"],
-      "utils/*": ["test/utils/*"],
-      "utils": ["test/utils"],
-      "fixtures/*": ["test/fixtures/*"],
-      "fixtures": ["test/fixtures"]
-    }
+    "outDir": "dist",
+    "declaration": true
   },
-  "exclude": [
-    "deploy"
+  "include": [
+    "./scripts",
+    "./build/types",
+    "./test",
+    "./deploy",
+    "helpers",
+    "config"
+  ],
+  "files": [
+    "./hardhat.config.ts",
+    "node_modules/@nomiclabs/hardhat-ethers/src/internal/type-extensions.ts",
+    "node_modules/@types/mocha/index.d.ts",
+    "node_modules/@typechain/hardhat/dist/type-extensions.d.ts"
   ]
 }
+
