add avalanche testnetwork file

--- a/package.json
+++ b/package.json
@@ -2,71 +2,69 @@
   "name": "truecurrency",
   "version": "2.0.0",
   "description": "",
+  "main": "truffle.js",
+  "directories": {
+    "test": "./test.sh"
+  },
   "scripts": {
-    "postinstall": "patch-package",
+    "coverage": "./coverage.sh",
     "flatten": "./flatten-all",
     "clean": "rm -rf ./build",
     "typecheck": "tsc --noEmit",
     "lint:sol": "solhint 'contracts/**/*.sol' && prettylint 'contracts/**/*.sol'",
-    "lint": "yarn lint:sol && yarn lint:ts",
     "lint:js": "eslint '{test,scripts}/**/*.js'",
-    "lint:ts": "eslint '{test,scripts}/**/*.ts' -c .eslintrc.typescript.js",
+    "lint:ts": "eslint '{test,test-ts,scripts}/**/*.ts' -c .eslintrc.typescript.js",
+    "lint": "yarn lint:js && yarn lint:sol && yarn lint:ts",
     "build:sol": "waffle .waffle.json",
     "build:types": "typechain --target ethers-v5 --outDir build/types 'build/*.json'",
     "build": "yarn clean && yarn build:sol && yarn build:types && bash ./indexBuild.sh",
-    "test": "mocha",
+    "test:js": "./test.sh",
+    "test:ts": "mocha",
+    "test": "yarn test:ts && yarn test:js",
     "checks": "yarn lint && yarn typecheck && yarn test",
-    "docs": "npx solidity-docgen --solc-module solc-0.6 -i contracts -o docs",
+    "deploy_truecurrency": "npx ts-node scripts/deploy_truecurrency.ts",
     "hardhat:compile": "npx hardhat compile",
+    "hardhat:deploy": "npx hardhat run deploy/deploy.ts --network hardhat",
     "hardhat:deploy-avalanche": "npx hardhat run deploy/deploy.ts --network avalanche",
     "hardhat:deploy-proxy-avalanche": "npx hardhat run deploy/deploy_proxy.ts --network avalanche",
-    "hardhat:verify-avalanche": "npx hardhat verify --network avalanche 0x34b507f812e228c482439579C4f312596a6A6B85"
+    "hardhat:verify-avalanche": "npx hardhat verify --network avalanche 0xE934c39Cc1e75168b62CDb69Cc8dbe4Ee9A69c06"
+  },
+  "husky": {
+    "hooks": {}
   },
   "author": "",
   "license": "SEE LICENSE IN LICENSE.md",
   "devDependencies": {
     "@nomiclabs/buidler-ethers": "^2.0.2",
-    "@nomiclabs/hardhat-ethers": "^2.0.4",
+    "@nomiclabs/hardhat-ethers": "^2.0.5",
     "@nomiclabs/hardhat-etherscan": "^2.1.8",
     "@nomiclabs/hardhat-waffle": "^2.0.2",
-    "@typechain/ethers-v5": "^2.0.0",
-    "@types/chai": "^4.2.11",
-    "@types/mocha": "^7.0.2",
-    "@typescript-eslint/eslint-plugin": "^4.6.1",
-    "@typescript-eslint/parser": "^4.6.1",
-    "chai": "^4.2.0",
-    "eslint": "^6.8.0",
-    "ethereum-waffle": "^3.1.2",
-    "mocha": "^8.2.1",
-    "patch-package": "^6.2.2",
-    "postinstall-postinstall": "^2.1.0",
-    "prettier": "2.0.5",
-    "prettier-plugin-solidity": "1.0.0-alpha.54",
-    "prettylint": "^1.0.0",
-    "solc-0.6": "npm:solc@0.6.10",
-    "solc": "0.6.10",
-    "solhint": "^3.0.0",
-    "hardhat": "^2.8.3",
+    "@typechain/ethers-v5": "^9.0.0",
+    "@types/chai": "^4.3.0",
+    "@types/mocha": "^9.1.0",
+    "@types/node": "^12.20.46",
+    "bignumber.js": "9.0.0",
+    "chai": "^4.3.6",
+    "chai-bignumber": "^3.0.0",
+    "chai-bn": "^0.3.1",
+    "dotenv": "^10.0.0",
+    "ethers": "^5.6.2",
+    "hardhat": "^2.9.2",
     "hardhat-proxy": "^1.0.0",
-    "ts-node": "^9.0.0",
-    "tsconfig-paths": "^3.9.0",
-    "typechain": "^3.0.0",
-    "typescript": "^4.0.5"
+    "ts-node": "^10.7.0",
+    "tsconfig-paths": "^3.12.0",
+    "typechain": "^7.0.0",
+    "typescript": "^4.5.5"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^3.1.0",
-    "@typechain/hardhat": "^4.0.0",
-    "dotenv": "^16.0.0",
-    "ethereum-mars": "^0.1.3-beta",
-    "ethers": "5.0.12",
-    "ganache-cli": "6.8.1",
-    "ganache-time-traveler": "^1.0.14",
     "openzeppelin-solidity": "^2.4.0",
-    "web3": "1.2.4"
+    "@ethersproject/bignumber": "^5.5.0",
+    "@ethersproject/providers": "^5.5.3",
+    "@typechain/hardhat": "^4.0.0"
   },
   "resolutions": {
     "ethereum-waffle/**/ganache-core": "^2.13.0",
-    "@ethereum-waffle/provider/ganache-core": "^2.13.0",
-    "**/@resolver-engine/core": "^0.3.3"
+    "@ethereum-waffle/provider/ganache-core": "^2.13.0"
   }
 }
