--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "lint:ts": "eslint '{test,test-ts,scripts}/**/*.ts' -c .eslintrc.typescript.js",
     "lint": "yarn lint:js && yarn lint:sol && yarn lint:ts",
     "build:sol": "waffle .waffle.json",
-    "build:types": "typechain --target ethers-v5 --outDir build/types 'build/*.json'",
+    "build:types": "typechain --target ethers-v5 --out-dir build/types 'build/*.json'",
     "build": "yarn clean && yarn build:sol && yarn build:types && bash ./indexBuild.sh",
     "test:js": "./test.sh",
     "test:ts": "mocha",
