--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,8 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 16.x
-          cache: 'yarn'
+      - name: Install yarn
+        run: npm install -g yarn
       - name: Pull submodules
         run: git submodule init && git submodule update
       - name: install_dependencies
