--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,12 +19,12 @@ jobs:
         run: npm install -g yarn
       - name: Pull submodules
         run: git submodule init && git submodule update
-      - name: install_dependencies
+      - name: Install dependencies
         run: |
           yarn install --frozen-lockfile
           pip3 install -U pip setuptools virtualenv
           pip3 install -r requirements-dev.txt
-      - name:
+      - name: Build
         run: |
           yarn build
           yarn typecheck
